Fixed screen repositioning with overflow-scroll at html

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -84,6 +84,10 @@ $L-width: 970px;
 $transition-delay: 0.5s;
 $transition-duration: 0.75s;
 
+html {
+	overflow-y: scroll;
+}
+
 #root {
 
 	#nyt-foreground-icon {
